--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "type": "module",
   "main": "src/server.ts",
   "scripts": {
-    "dev": "nodemon ./src/app.js",
-    "start": "node ./src/app.js"
+    "collect": "node ./src/collector/collector.js",
+    "notify": "node ./src/notify/notify.js"
   },
   "license": "MIT",
   "dependencies": {
@@ -15,13 +15,16 @@
     "@terra-money/terra.js": "^2.1.23",
     "axios": "^0.26.1",
     "axios-rate-limit": "^1.3.0",
+    "axios-retry": "^3.2.4",
     "bignumber.js": "^9.0.1",
     "date-fns-tz": "^1.1.3",
     "discord-api-types": "^0.31.0",
     "discord.js": "^13.6.0",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "lodash": "^4.17.21",
     "luxon": "^2.1.1",
+    "pg": "^8.7.3",
     "sqlite": "^4.0.25",
     "sqlite3": "^5.0.2",
     "terra-utils": "^1.1.2"
